# ros2-explorer-bot

./: CMakeLists.txt  README.md  package.xml
config/: explorer_params.yaml
include/autonomous_explorer/: explorer_node.hpp  navigation_controller.hpp  slam_processor.hpp
launch/: gazebo_world.launch.py  simple_explorer_launch.py  slam_launch.py
src/: explorer_node.cpp  navigation_controller.cpp  slam_processor.cpp
urdf/: explorer_robot.urdf
worlds/: maze_world.world
